# Minkowski-structure-metrics-calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: MinkowskiStructureMetrics.cpp  MinkowskiStructureMetrics.h  gsd_loader.h  main.cpp  main.h  process.cpp  process.h
testLattices/: README
